# ferroboy

./: .editorconfig  .gitmodules  .mergify.yml  Cargo.toml  LICENSE  aliases.js  crates.js  readme.md  search-index.js  settings.html  source-files.js
ferroboy/: Cargo.toml  all.html  enum.WideRegister.html  fn.start.html  fn.tick.html  index.html  readme.md  sidebar-items.js  static.OPCODES.html  struct.AssemblyInstruction.html  struct.Cartridge.html  struct.CartridgeBuilder.html  struct.Config.html  struct.ConfigBuilder.html  struct.State.html  struct.StateBuilder.html  table.txt  trait.Disassemble.html  type.Result.html
ferroboy/assembly/: index.html  sidebar-items.js
ferroboy/assembly/disassemble/: index.html  sidebar-items.js  trait.Disassemble.html
ferroboy/assets/: gb-test-roms.txt
ferroboy/error/: enum.CartridgeLoadError.html  enum.DisassemblyError.html  enum.Error.html  enum.OperationError.html  index.html  sidebar-items.js
ferroboy/examples/: cpu_debug.rs  opcode_table.rs  rom_debug.rs  startup_debug.rs
ferroboy/extensions/: index.html  sidebar-items.js  trait.Carry.html  trait.HalfCarry.html
ferroboy/helpers/: fn.format_hex_address.html  fn.u16_to_word.html  fn.word_to_u16.html  index.html  sidebar-items.js
ferroboy/operations/: index.html  sidebar-items.js
ferroboy/operations/add/: index.html
ferroboy/src/: assembly.rs  cpu.rs  error.rs  extensions.rs  helpers.rs  lib.rs  mmu.rs  opcodes.rs  state.rs
ferroboy/state/: index.html  sidebar-items.js  struct.State.html  struct.StateBuilder.html
ferroboy/system/: index.html  sidebar-items.js
(+5564 files in other folders)
