[package]
name = "ferroboy"
version = "0.1.0"
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]
edition = "2018"

[features]
disassembly = []
introspection = []

[dependencies]
bitflags = "1.2.1"
once_cell = "1.5.2"
thiserror = "1.0.23"

[dev-dependencies]
pico-args = "0.3.4"
pretty_assertions = "0.6.1"
prettytable-rs = "0.8.0"

[[example]]
name = "opcode_table"
required-features = ["introspection", "disassembly"]
