[package]
name = "ferroboy"
version = "0.1.0"
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]
edition = "2018"

[features]
disassembly = []
introspection = []

[dependencies]
bitflags = "1.3.1"
once_cell = "1.7.2"
thiserror = "1.0.24"

[dev-dependencies]
pico-args = "0.4.1"
pretty_assertions = "0.7.2"
prettytable-rs = "0.8.0"

[[example]]
name = "opcode_table"
required-features = ["introspection", "disassembly"]
