[package]
name = "ferroboy"
version = "0.1.0"
authors = ["berwyn <berwyn.codeweaver@gmail.com>"]
edition = "2021"
rust-version = "1.56"

[features]
disassembly = []
introspection = []

[dependencies]
bitflags = "1.3.2"
once_cell = "1.8.0"
thiserror = "1.0.38"

[dev-dependencies]
pico-args = "0.5.0"
pretty_assertions = "1.2.1"
prettytable-rs = "0.10.0"

[[example]]
name = "opcode_table"
required-features = ["introspection", "disassembly"]
